--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.sql.init.mode=never
 server.port=8080
 # Explicitly bind to all network interfaces so mobile devices on the LAN can reach the API
 server.address=0.0.0.0
+
+# Multipart file upload configuration (for visit photos)
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
